--- a/index.css
+++ b/index.css
@@ -2,3 +2,19 @@
     padding: 0;
     margin: 0;
 }
+:root{
+    --main-background-color: linear-gradient(to right, #03c6fc, #5be3dc);
+}
+body{
+    background-image: var(--main-background-color);
+    color: white;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-transform: capitalize;
+}
+#survey-form{
+    width: 40%;
+    margin-left: 15rem;
+    margin-top: 5rem;
+}
+
+
